fix(mathjax): display font not centered #293

--- a/source/css/common/markdown.styl
+++ b/source/css/common/markdown.styl
@@ -225,4 +225,5 @@
     display inline-block
 
   mjx-container[display="true"]
-    display block
+    display flex !important
+    justify-content center
